--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
                 <ul class="main-nav">
                     <li><a class="" href="#"> Home </a></li>
                     <li><a class="" href="#"> Portfolio </a></li>
-                    <li><a class="" href="#"> About </a></li>
+                    <!-- <li><a class="" href="#"> About </a></li> -->
                     <li><a class="" href="#"> Contact </a></li>
                 </ul>
             </div>
