Working through - Solving NODE 5

--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,9 @@
     </header>
 <main>
     <!-- <section>
+                <img src="./images/kyatimmins.png" alt="Inlander Summercamps 2023" class=" kya-photo" style="  width: 450px; border-radius: 20px; margin-top: 2rem;">
+    </section> -->
+    <!-- <section>
         <p>Heyo,  I am Kya Timmins. I'm an Illustrator and Graphic Designer living in North Idaho.</p>
     </section> -->
 </main>
