Nav Styling - PAGE IS PAGING 6

--- a/public/contact.html
+++ b/public/contact.html
@@ -27,28 +27,24 @@
         </nav>
     </header>
 <main>
-    <!-- <section>
-                <img src="./images/kyatimmins.png" alt="Inlander Summercamps 2023" class=" kya-photo" style="  width: 450px; border-radius: 20px; margin-top: 2rem;">
-    </section> -->
-    <!-- <section>
-        <p>Heyo,  I am Kya Timmins. I'm an Illustrator and Graphic Designer living in North Idaho.</p>
-    </section> -->
-</main>
-    <section class="image-layout">
-        <div class="portfolio-images">
-            <div class="image-grid">
-                <img src="./images/inlander/GDES_223_SPRING203_INLANDER_SUMMERCAMPS_KYA_TIMMINS (1).png" alt="Inlander Summercamps 2023">
-                <img src="./images/inside-job/Inside-Job.png" alt="Inside Job Fanart">
-                <img src="./images/get-guts/GDES_283_SPRING2022_ADDY_LIBRARY_KYA_TIMMINS.png" alt="Get Guts Organic Kombucha">
-                <img src="./images/autumn-frog/Frog_Autumn_Print.png" alt="Frog Autumn Drawing">
 
-                <img src="./images/doodle-page/Doodle-Red-Critters.PNG" alt="Doodle Page">
-                <img src="./images/froggy-keychains/Frog Keychains Post.png" alt="Froggy Keychains">
-                <img src="./images/thrive/Thrive-Collection.png" alt="Get Guts Organic Kombucha">
-                <img src="./images/kya-jo-design/Kya-Jo_Design.png" alt="Frog Autumn Drawing">
-            </div>
-        </div>
+    <div>
+    <section class="about">
+        <!-- <h2>Contact</h2> -->
+        <p style="margin: 2rem; margin-top: 7rem;"> 
+            Interested in working together on a Design or Illustration Project? Send me an email with all the details.
+        </p>
+       <button> Lets Work Together
+        <form method="post" action="mailto:kyajotimmins@gmail.com"><form>
+        </button>
+
     </section>
+
+    <!-- <div class="kya-about">
+        <img src="./images/kyatimmins.png" alt="Inlander Summercamps 2023" class=" kya-photo" style="  width: 450px; border-radius: 20px; margin-top: 2rem;">
+</div> -->
+    </div>
+</main>
 
 
 <footer>The Illustration & Designs of Kya Timmins</footer>
